<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@id/ll_navigation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="left"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/default_bg">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@id/civ_profile_image"
            android:layout_width="@dimen/header_width"
            android:layout_height="@dimen/header_height"
            android:layout_marginEnd="@dimen/base_margin"
            android:layout_marginStart="@dimen/base_margin"
            android:layout_marginTop="@dimen/big_margin"
            android:src="@drawable/head"
            app:civ_border_color="@android:color/white"
            app:civ_border_width="1dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_margin="@dimen/base_margin"
            android:orientation="vertical">

            <TextView
                android:id="@id/tv_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@id/tv_user_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_email"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <Button
            android:id="@id/btn_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:text="@string/other_home" />

        <Button
            android:id="@id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base_margin"
            android:background="?attr/selectableItemBackground"
            android:text="@string/user_logout"
            android:visibility="gone" />
    </LinearLayout>
</LinearLayout>